# lammps-analyser

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE_CHECKLIST.md  _typos.toml  bacon.toml  build.rs  clippy.toml  convert_docs.bash  fix.lmp  in.nemd  just_a_fix.lmp  justfile  nemd.in  node_types.json  pyrightconfig.json
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: cli_bench.rs  on_change_bench.rs
docs_extract/: computes.txt  fixes.txt  index_map.txt  pair_styles.txt  parse_docs.py  pyrightconfig.json
example_input_scripts/: add_slabs.in  charmm_bad.in  fix.lmp  in.expression_nesting  in.invalid_string  in.multi_line_string  in.nemd  in.syntax_errors  in.variable_index  nemd.in
lammps_docs_md/: Bibliography.md  Build.md  Build_basics.md  Build_cmake.md  Build_development.md  Build_diskspace.md  Build_extras.md  Build_link.md  Build_make.md  Build_manual.md  Build_package.md  Build_settings.md  Build_windows.md  Classes.md  Classes_atom.md  Classes_input.md  Classes_lammps.md  Commands.md  Commands_all.md  Commands_bond.md  Commands_category.md  Commands_compute.md  Commands_dump.md  Commands_fix.md  Commands_input.md  Commands_kspace.md  Commands_pair.md  Commands_parse.md  Commands_removed.md  Commands_structure.md  Cplusplus.md  Developer.md  Developer_atom.md  Developer_code_design.md  Developer_comm_ops.md  Developer_flow.md  Developer_grid.md  Developer_notes.md  Developer_org.md  Developer_par_comm.md  (+939 more)
src/: check_commands.rs  check_styles.rs  commands.rs  compute_styles.rs  diagnostic_report.rs  docs_map.rs  error_finder.rs  fix_styles.rs  hover.rs  identifinder.rs  input_script.rs  issue.rs  issues.rs  lammps_errors.rs  lib.rs  main.rs  parse_command.rs  spanned_error.rs  spans.rs  styles.rs  utils.rs
src/ast/: arguments.rs  commands.rs  compute_def.rs  expressions.rs  find_node.rs  fix_def.rs  from_node.rs  ident.rs  impl_helpers.rs  mod.rs  variable_def.rs  word.rs
src/check_commands/: check_fix.rs  computes.rs  invalid_arguments.rs  utils.rs
src/check_commands/fixes/: mod.rs  nose_hoover.rs
src/diagnostics/: mod.rs
src/docs/: docs_map.rs  mod.rs
src/lints/: mod.rs
src/lsp/: mod.rs  tower.rs
src/styles/: compute_styles.rs  fix_styles.rs  macros.rs  pair_styles.rs
src/utils/: tree_sitter_helpers.rs
tests/: in.variables
