[package]
name = "lammps-analyser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
cc="*"

[dependencies]
anyhow = "1.0.72"
ariadne = "0.3.0"
clap = { version = "4.3.19", features = ["derive"] }
dashmap = "5.5.1"
itertools = "0.11.0"
lsp-server = "0.7.3"
lsp-types = "0.94.1"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
serde = "1.0.171"
serde_json = "1.0.105"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.44"
tokio = { version = "1.32.0", features = ["io-std", "rt", "macros", "rt-multi-thread"] }
tower-lsp = "0.20.0"
tree-sitter = "0.20.10"
tree-sitter-lammps = { path = "../tree-sitter-lammps" } # TODO: Work out how to de capitalise this

[lints.clippy]
enum_glob_use = "deny"
missing_panics_doc = "warn"
redundant_clone = "warn"
ref_option_ref = "warn"
[[bin]]
# TODO: rename to lmp_lsp
# TODO: Or make a subcommand of lammps_analyser bin
name = "lsp"
# TODO: make this a sensible path.
path = "./src/lsp/tower.rs"
