[package]
name = "lammps-analyser"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/chappertron/lammps-analyser"

default-run = "lammps-analyser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "*"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
dashmap = "5.5.1"
itertools = "0.11.0"
lsp-server = "0.7.3"
lsp-types = "0.94.1"
once_cell = "1.19.0"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
serde = "1.0.171"
serde_json = "1.0.105"
thiserror = "1.0.44"
tokio = { version = "1.32.0", features = [
    "io-std",
    "rt",
    "macros",
    "rt-multi-thread",
] }
tower-lsp = "0.20.0"
tree-sitter = "0.23.0"
tree-sitter-lammps = "0.0.3"

[dev-dependencies]
criterion = "0.3"
pretty_assertions = "1.4.0"

[[bench]]
name = "cli_bench"
harness = false

[lints.clippy]
enum_glob_use = "deny"
## missing_panics_doc = "warn"
redundant_clone = "warn"
ref_option_ref = "warn"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
